bootstrap.log
cc -o zig-wasm2c stage1/wasm2c.c -O2 -std=c99
./zig-wasm2c stage1/zig1.wasm zig1.c
cc -o zig1 zig1.c stage1/wasi.c -std=c99 -Os -lm
./zig1 lib build-exe -ofmt=c -lc -OReleaseSmall --name zig2 -femit-bin=zig2.c -target x86_64-linux --dep build_options --dep aro -Mroot=src/main.zig -Mbuild_options=config.zig -Maro=lib/compiler/aro/aro.zig
src/codegen/aarch64/CodeGen_v2.zig:295:5: error: expected type 'error{CodegenFail,OutOfMemory,Overflow,RelocationNotByteAligned}', found 'error{CodegenFail,OutOfMemory,OutOfRegisters,Overflow,RelocationNotByteAligned}'
    try function.gen();
    ^~~~~~~~~~~~~~~~~~
src/codegen/aarch64/CodeGen_v2.zig:295:5: note: 'error.OutOfRegisters' not a member of destination error set
referenced by:
    generate: src/codegen/aarch64.zig:42:39
    generateFunction: src/codegen.zig:163:45
    17 reference(s) hidden; use '-freference-trace=19' to see all references
src/codegen/aarch64/CodeGen_v2.zig:1337:26: error: no field named 'rm' in struct 'codegen.aarch64.Mir_v2.Inst.Data__struct_12774'
                        .rm = operand.register.to32(),
                         ^~
src/codegen/aarch64/Mir_v2.zig:485:13: note: struct declared here
        rr: struct {
            ^~~~~~

Compile Log Output:
@as(*const [30:0]u8, "Invalid compare and branch op:"), @as([]const u8, "cbz"[0..3])
@as(*const [30:0]u8, "Invalid compare and branch op:"), @as([]const u8, "cbnz"[0..4])
@as(*const [30:0]u8, "Invalid conditional select op:"), @as([]const u8, "csel"[0..4])
@as(*const [30:0]u8, "Invalid conditional select op:"), @as([]const u8, "csinc"[0..5])
@as(*const [32:0]u8, "Invalid exception generation op:"), @as([]const u8, "brk"[0..3])
@as(*const [19:0]u8, "Invalid barrier op:"), @as([]const u8, "dmb"[0..3])
@as(*const [19:0]u8, "Invalid barrier op:"), @as([]const u8, "dsb"[0..3])
@as(*const [19:0]u8, "Invalid barrier op:"), @as([]const u8, "isb"[0..3])
child process failed
